# ZeroToProd

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: common.rs  health_check.rs  subscriptions.rs
