[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
regex = "1.6.0"
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]


[dev-dependencies]
reqwest = "0.11"


[lib]
name = "zero2prod"
path = "src/lib.rs"